@@ -127,5 +127,7 @@ Entry { filename = "ssl-enum-ciphers.nse", categories = { "discovery", "intrusiv
 Entry { filename = "sslv2.nse", categories = { "default", "safe", } }
 Entry { filename = "telnet-brute.nse", categories = { "auth", "intrusive", } }
 Entry { filename = "upnp-info.nse", categories = { "default", "safe", } }
+Entry { filename = "vnc-brute.nse", categories = { "auth", "intrusive", } }
+Entry { filename = "vnc-info.nse", categories = { "discovery", "safe", } }
 Entry { filename = "whois.nse", categories = { "discovery", "external", "safe", } }
 Entry { filename = "x11-access.nse", categories = { "auth", "default", "safe", } }
